--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -202,7 +202,7 @@ header nav .nav-tools ul > li:last-child {
   padding-top: 1px;
 }
 
-.section.secondary {
+header .section.secondary {
   text-align: center;
   width: 100%;
   color: #fff;
@@ -212,7 +212,7 @@ header nav .nav-tools ul > li:last-child {
   border-bottom: 2px solid #fff;
 }
 
-.section.secondary p {
+header .section.secondary p {
   font-weight: 500;
   line-height: 19.6px;
   margin: 0;
@@ -524,7 +524,7 @@ header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'
     font-size: var(--body-font-size-s);
   }
   
-  .section.menu.columns-container {
+  header .section.menu.columns-container {
     background-color: #fff;
     display: none;
     flex-flow: row wrap;
@@ -538,7 +538,7 @@ header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'
     top: 200px;
   }
 
-  .section.menu.columns-container::before {
+  header .section.menu.columns-container::before {
     border-bottom: 16px solid #e9e9e9;
     border-left: 19px solid transparent;
     border-right: 19px solid transparent;
@@ -550,45 +550,45 @@ header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'
     width: 0;
   }
 
-  .section.menu.columns-container > div {
+  header .section.menu.columns-container > div {
     display: inline-block;
     flex-grow: 1;
   }
   
-  .section.menu.columns-container img {
+  header .section.menu.columns-container img {
     width: 50px;
     height: auto;
   }
   
-  .section.menu.columns-container p {
+  header .section.menu.columns-container p {
     margin: 0;
     padding: 0;
     color: #6c6c6c;
   }
 
-  .section.menu.columns-container a {
+  header .section.menu.columns-container a {
     color: var(--text-color);
     font-weight: 500;
     text-decoration: none;
   }
 
-  .section.menu.columns-container a:hover {
+  header .section.menu.columns-container a:hover {
     text-decoration: underline;
   }
 
-  .section.menu.columns-container .columns > div {
+  header .section.menu.columns-container .columns > div {
     margin-bottom: 5px;
   }
 
-  .section.menu.columns-container .columns > div > div:first-child {
+  header .section.menu.columns-container .columns > div > div:first-child {
     flex-shrink: 1;
   }
 
-  .section.menu.columns-container .columns > div > div:last-child {
+  header .section.menu.columns-container .columns > div > div:last-child {
     flex-grow: 3;
   }
 
-  .section.menu.columns-container .columns > div > div:first-child > p > a {
+  header .section.menu.columns-container .columns > div > div:first-child > p > a {
     color: #333;
     font-size: 14px;
     font-weight: 300;
@@ -596,11 +596,11 @@ header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'
     float: inline-end;
   }
 
-  .section.menu.columns-container .columns > div > div:first-child > p > a:hover {
+  header .section.menu.columns-container .columns > div > div:first-child > p > a:hover {
     text-decoration: underline;
   }
 
-  .section.menu.columns-container .columns > div > div:first-child > p {
+  header .section.menu.columns-container .columns > div > div:first-child > p {
     border-bottom: 2px solid #dedede;
     padding-bottom: 5px;
     margin: 10px 0 10px 10px;
